--- a/src/App.css
+++ b/src/App.css
@@ -1,50 +1,116 @@
-/* body {
-  background-image: url('https://path-to-rick-and-morty-image.jpg');
+/* App.css */
+
+/* Fondo y configuración general */
+body, html {
+  margin: 0;
+  padding: 0;
+  font-family: 'Arial, sans-serif';
+  background-image: url('https://www.toptal.com/designers/subtlepatterns/patterns/memphis-mini.png');
   background-size: cover;
-  background-repeat: no-repeat;
   background-position: center;
-} */
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  color: #333;
+}
 
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+/* Contenedor principal */
+.main-container {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  min-height: 100vh;
+  position: relative; /* Necesario para posicionar los botones al final */
+}
+
+/* Título centralizado */
+h1 {
+  margin-bottom: 40px;
   text-align: center;
+  color: white;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+/* Estilos de secciones */
+.left-section, .right-section {
+  flex-basis: 50%;
+  padding: 20px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.right-section {
+  background-color: rgba(255,255,255,0.8);
+  border-radius: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+/* Botones */
+button {
+  padding: 10px 20px;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  margin-top: 10px;
 }
 
-.card {
-  padding: 2em;
+button.agregar {
+  background-color: #4CAF50;
 }
 
-.read-the-docs {
-  color: #888;
+button.limpiar {
+  background-color: #f44336;
 }
 
+button.historial {
+  background-color: #2196F3;
+  margin-bottom: 20px;
+}
+
+/* Tablas */
+table {
+  width: 100%;
+  margin-bottom: 20px;
+  background-color: rgba(255,255,255,0.8);
+  text-align: left;
+  border-collapse: collapse;
+  color: #333;
+}
+
+table, th, td {
+  border: 1px solid black;
+}
+
+thead th {
+  background-color: #f2f2f2;
+}
+
+/* Estilo de totales */
+.total-positive {
+  color: rgb(34, 165, 34);
+}
+
+.total-negative {
+  color: red;
+}
+
+/* Historial lateral */
+.historial-menu {
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 250px;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 20px;
+  overflow-y: auto;
+}
+
+/* Contenedor para los botones */
+.buttons-container {
+  /* position: absolute; */
+  bottom: 20px;
+  width: calc(100% - 40px);
+  display: flex;
+  justify-content: space-between;
+  padding: 0 400px;
+  margin: 2%;
+}
